--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,7 @@
         android:id="@+id/devices"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/inputs" />
 
     <Spinner
         android:id="@+id/paireddevices"
@@ -86,11 +85,12 @@
 
     <Spinner
         android:id="@+id/passwords"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@id/repeat_input"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="-200dp"
+        android:layout_marginTop="344dp"
         app:layout_constraintStart_toEndOf="@id/devices"
-        />
+        app:layout_constraintTop_toBottomOf="@id/repeat_input" />
 
 
 
